--- a/view/adminhtml/web/css/custom.css
+++ b/view/adminhtml/web/css/custom.css
@@ -143,4 +143,4 @@ button.primary:focus,
 /* Footer */
 .footer-legal-system{ display: none;}
 
-.page-main-actions{ display: none;}
+/* .page-main-actions{ display: none;} */
