--- a/view/adminhtml/web/css/custom.css
+++ b/view/adminhtml/web/css/custom.css
@@ -171,4 +171,8 @@ button.primary:focus,
     content: 'Copyright ©️ 2020 Epicom Technology. Todos os direitos reservados.';
 }
 
+.login-footer {
+    display: none;
+}
+
 /* .page-main-actions{ display: none;} */
