--- a/view/adminhtml/layout/default.xml
+++ b/view/adminhtml/layout/default.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<head>
-		<css src="Dangs_Admintheme::css/custom.css"/>
+		<css src="Epicom_Admintheme::css/custom.css"/>
 	</head>
 	<body>
 		<referenceBlock name="logo">
             <arguments>
-            	<argument name="logo_image_src" xsi:type="string">Dangs_Admintheme/images/logo-square.jpeg</argument>
+            	<argument name="logo_image_src" xsi:type="string">Epicom_Admintheme/images/logo-square.jpeg</argument>
             </arguments>
         </referenceBlock>
 	</body>
