--- a/view/adminhtml/layout/default.xml
+++ b/view/adminhtml/layout/default.xml
@@ -6,7 +6,7 @@
 	<body>
 		<referenceBlock name="logo">
             <arguments>
-            	<argument name="logo_image_src" xsi:type="string">Epicom_Admintheme/images/logo-square.jpeg</argument>
+            	<argument name="logo_image_src" xsi:type="string">Epicom_Admintheme/images/logo-square.png</argument>
             </arguments>
         </referenceBlock>
 	</body>
